--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"start": "node src/lib/trpc/ws.js"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.5.0",
-		"@types/node": "^20.6.2",
-		"@types/pg": "^8.10.2",
+		"@types/ws": "^8.5.5",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.15",
@@ -26,21 +27,15 @@
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/core": "^0.15.0",
-		"@auth/sveltekit": "^0.3.7",
 		"@tailwindcss/typography": "^0.5.10",
 		"@trpc/client": "^10.38.3",
-		"@trpc/server": "^10.38.3",
 		"daisyui": "^3.7.6",
-		"pg": "^8.11.3",
 		"svelte-reveal": "^0.7.0",
 		"svelte-typewriter": "^3.1.6",
-		"trpc-sveltekit": "^3.5.20",
-		"zod": "^3.22.2"
+		"ws": "^8.14.2"
 	}
 }
