--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,22 @@
 {
-	"scripts": {
-		"start": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && node build/index.js"
-	},
-	"type": "module",
-	"dependencies": {
-		"@trpc/server": "^10.38.4",
-		"dotenv": "^16.3.1",
-		"pg": "^8.11.3",
-		"typescript": "^5.2.2",
-		"ws": "^8.14.2",
-		"zod": "^3.22.2"
-	},
-	"devDependencies": {
-		"@types/node": "^20.6.4",
-		"@types/pg": "^8.10.2",
-		"@types/ws": "^8.5.5",
-		"tsc-alias": "^1.8.8"
-	}
+  "scripts": {
+    "start": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && node build/index.js",
+    "setup": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && node build/setup.js"
+  },
+  "type": "module",
+  "dependencies": {
+    "@trpc/server": "^10.38.4",
+    "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
+    "typed-emitter": "^2.1.0",
+    "typescript": "^5.2.2",
+    "ws": "^8.14.2",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.4",
+    "@types/pg": "^8.10.2",
+    "@types/ws": "^8.5.5",
+    "tsc-alias": "^1.8.8"
+  }
 }
