--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "@trpc/server": "^10.38.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "typed-emitter": "^2.1.0",
@@ -14,6 +15,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/node": "^20.6.4",
     "@types/pg": "^8.10.2",
     "@types/ws": "^8.5.5",
