--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"start": "node src/lib/trpc/ws.js"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.5.0",
 		"@trpc/server": "^10.38.4",
 		"@types/ws": "^8.5.5",
